// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 gzxUAm DialogBox__DialogCard-iv0dnf-1 eLwRLb"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 bRGQtj"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 cLteVL"
            fontSize="1em"
            fontWeight={600}
            letterSpacing="0px"
          >
            Default Dialog
          </h6>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
        fontSize="1em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kiIKlP DialogBox__ButtonGrid-iv0dnf-0 cUZJkB"
        id={null}
        rows={null}
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 jgKudQ DialogBox__PrimaryButton-iv0dnf-3 kFUBVj"
          disabled={false}
          htmlFor={null}
          id="Negative"
          name="Negative"
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
              fontSize="0.876em"
              fontWeight={600}
              htmlFor={null}
              letterSpacing="0px"
            >
              Negative
            </label>
          </section>
        </button>
        <button
          className="Button__StyledButton-sc-1v7sls2-0 iyowdu DialogBox__SecondaryButton-iv0dnf-4 RChLi"
          disabled={false}
          htmlFor={null}
          id="Affirmative"
          name="Affirmative"
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
              fontSize="0.876em"
              fontWeight={600}
              htmlFor={null}
              letterSpacing="0px"
            >
              Affirmative
            </label>
          </section>
        </button>
      </section>
    </section>
  </div>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 gzxUAm DialogBox__DialogCard-iv0dnf-1 eLwRLb"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 bRGQtj"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 cLteVL"
            fontSize="1em"
            fontWeight={600}
            letterSpacing="0px"
          >
            Successful Dialog
          </h6>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
        fontSize="1em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kiIKlP DialogBox__ButtonGrid-iv0dnf-0 cUZJkB"
        id={null}
        rows={null}
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 gJnnWg DialogBox__PrimaryButton-iv0dnf-3 kFUBVj"
          disabled={false}
          htmlFor={null}
          id="Negative"
          name="Negative"
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
              fontSize="0.876em"
              fontWeight={600}
              htmlFor={null}
              letterSpacing="0px"
            >
              Negative
            </label>
          </section>
        </button>
        <button
          className="Button__StyledButton-sc-1v7sls2-0 hjYGt DialogBox__SecondaryButton-iv0dnf-4 RChLi"
          disabled={false}
          htmlFor={null}
          id="Affirmative"
          name="Affirmative"
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
              fontSize="0.876em"
              fontWeight={600}
              htmlFor={null}
              letterSpacing="0px"
            >
              Affirmative
            </label>
          </section>
        </button>
      </section>
    </section>
  </div>
</div>
`;

exports[` 3`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="Card__CardWrapper-sc-1g3s676-5 gzxUAm DialogBox__DialogCard-iv0dnf-1 eLwRLb"
    href={null}
    id={null}
    media={null}
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 bRGQtj"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <h6
            className="Typography__TitleText-sc-19auepv-2 cLteVL"
            fontSize="1em"
            fontWeight={600}
            letterSpacing="0px"
          >
            Error Dialog
          </h6>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 hJbWhv"
        fontSize="1em"
        fontWeight={400}
        id={null}
        letterSpacing="0px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 gSUFKa"
      id={null}
      onClick={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 kiIKlP DialogBox__ButtonGrid-iv0dnf-0 cUZJkB"
        id={null}
        rows={null}
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 cA-DKOM DialogBox__PrimaryButton-iv0dnf-3 kFUBVj"
          disabled={false}
          htmlFor={null}
          id="Negative"
          name="Negative"
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
              fontSize="0.876em"
              fontWeight={600}
              htmlFor={null}
              letterSpacing="0px"
            >
              Negative
            </label>
          </section>
        </button>
        <button
          className="Button__StyledButton-sc-1v7sls2-0 gRDNTw DialogBox__SecondaryButton-iv0dnf-4 RChLi"
          disabled={false}
          htmlFor={null}
          id="Affirmative"
          name="Affirmative"
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
              fontSize="0.876em"
              fontWeight={600}
              htmlFor={null}
              letterSpacing="0px"
            >
              Affirmative
            </label>
          </section>
        </button>
      </section>
    </section>
  </div>
</div>
`;
